Replace platform-named GtkSkiaApp with SkikoApp + dispatch backend
The previous public class baked the platform into its name ("Gtk"),
forcing downstream apps to write platform-specific call sites.
Existing skiko consumers don't think that way — SkiaLayer chooses
LinuxOpenGLRedrawer / MetalRedrawer / Direct3DRedrawer internally
based on hostOs and presents one type to the user. The awtfree path
should match.

Refactor:
- SkikoApp.kt (new, public): the consumer-facing entry point. Same
  constructor shape as before — applicationId, title, defaultWidth,
  defaultHeight, draw(canvas, w, h, isDark). Internally constructs a
  SkikoAppBackend by dispatching on hostOs.
- LinuxGtkBackend.kt (renamed from GtkSkiaApp.kt): the previous body,
  now `internal class LinuxGtkBackend : SkikoAppBackend`. Behaviour
  preserved verbatim, including AdwApplicationWindow + AdwHeaderBar +
  AdwStyleManager hookup and the GTK4 fallback.
- SkikoAppBackend (internal interface in SkikoApp.kt): just `fun run(): Int`
  for now; future surface (focus, occlusion, lifecycle callbacks) lands
  here when Compose Desktop integration needs it.

macOS and Windows branches in the dispatch throw with a message
pointing at the relevant Phase 1A / 1C section of docs/java25-ffm.md
so the failure mode is "this platform's FFM bindings aren't written
yet" rather than "what is GtkSkiaApp doing on macOS".

Demo.kt updated to use SkikoApp. No public symbol named after a
specific toolkit remains in the awtfree library surface.

Verified: ./gradlew :skiko:runAwtFreeDemo -Pskiko.awtfree.enabled=true
yields the same 800x554 Adwaita-chromed window, "[SkiaGLArea] first
frame: 800x554, fbId=1".